try to "fixup" rendering of underlines and stuff like that

KTextEditor assumes equal line height, this leads to problems for _ and stuff like that

"fix": spread lines by factor 1.1

BUG: 335079

please test this, looks "ok" here and avoid the problems (tested with some fonts + CTRL--/+ zooming

if that is "unusable", we can revert it before 5.27